tests/NormalTests/paczka1/fuzzy1/50381681.err
Error in line 10: RubH2 A9u8 5,2
Error in line 4: yLWYOvPNlHp A918 357,9
Error in line 12: yLWYOvPNlHp S30 76,7
Error in line 13: yLWYOvPNlHp A799 50,6
Error in line 27: yLWYOvPNlHp A918 63,4
Error in line 31: prakc S30 111,0
Error in line 33: prakc A918 77,5
